--- a/index.html
+++ b/index.html
@@ -52,16 +52,24 @@
         <span class="img-list-item-info">卡片图片过大</span>
       </div>
       <div class="img-list-item">
-        <img src="./uploader/images/卡片进度条.png">
-        <span class="img-list-item-info">卡片进度条</span>
-      </div>
-      <div class="img-list-item">
         <img src="./uploader/images/卡片图片过大删除按钮.png">
         <span class="img-list-item-info">悬停显示删除按钮</span>
       </div>
       <div class="img-list-item">
+        <img src="./uploader/images/卡片进度条.png">
+        <span class="img-list-item-info">卡片进度条</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./uploader/images/卡片读取失败.png">
+        <span class="img-list-item-info">卡片图片读取失败</span>
+      </div>
+      <div class="img-list-item">
         <img src="./uploader/images/列表图片过大.png">
         <span class="img-list-item-info">列表图片过大</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./uploader/images/列表读取失败.png">
+        <span class="img-list-item-info">列表图片读取失败</span>
       </div>
       <div class="img-list-item">
         <img src="./uploader/images/列表进度条.png">
