--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="title">
       <span>vue-img-uploader</span>
       <span>
-        <a href="#">Home</a>
-        <a href="https://github.com/6fa">Github</a>
+        <a href="#">首页</a>
+        <a href="https://github.com/6fa/vue-img-uploader">项目地址</a>
       </span>
     </div>
     <div class="img-list">
