--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         <span class="img-list-item-info">卡片预览+卡片选择(悬停显示放大和删除按钮)</span>
       </div>
       <div class="img-list-item">
+        <img src="./uploader/images/卡片预览+卡片选择.png">
+        <span class="img-list-item-info">卡片预览+按钮选择</span>
+      </div>
+      <div class="img-list-item">
         <img src="./uploader/images/卡片预览+拖拽选择.png">
         <span class="img-list-item-info">卡片预览+拖拽选择</span>
       </div>
