--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <span class="img-list-item-info">卡片预览+卡片选择(悬停显示放大和删除按钮)</span>
       </div>
       <div class="img-list-item">
-        <img src="./uploader/images/卡片预览+卡片选择.png">
+        <img src="./uploader/images/卡片预览+按钮选择.png">
         <span class="img-list-item-info">卡片预览+按钮选择</span>
       </div>
       <div class="img-list-item">
