--- a/index.html
+++ b/index.html
@@ -90,9 +90,79 @@
     <div class="title">
       <span>snacks-app</span>
       <span>
-        <a href="#">Home</a>
-        <a href="https://github.com/6fa/Snack-App">Github</a>
+        <a href="#">首页</a>
+        <a href="https://github.com/6fa/Snack-App">项目地址</a>
       </span>
+    </div>
+    <div class="img-list">
+      <div class="img-list-item">
+        <img src="./snacks-app/未登录首页.png">
+        <span class="img-list-item-info">未登录首页</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./snacks-app/已登录首页.png">
+        <span class="img-list-item-info">已登录首页</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./snacks-app/注册框.png">
+        <span class="img-list-item-info">注册框</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./snacks-app/注册-用户名已存在.png">
+        <span class="img-list-item-info">注册-用户名已存在</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./snacks-app/注册-密码不一致.png">
+        <span class="img-list-item-info">注册-密码不一致</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./snacks-app/登录框.png">
+        <span class="img-list-item-info">登录框</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./snacks-app/最新零食.png">
+        <span class="img-list-item-info">最新零食</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./snacks-app/零食详情页.png">
+        <span class="img-list-item-info">零食详情页</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./snacks-app/回复发布者.png">
+        <span class="img-list-item-info">回复发布者</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./snacks-app/评论页详情.png">
+        <span class="img-list-item-info">评论页详情</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./snacks-app/搜索页.png">
+        <span class="img-list-item-info">搜索页</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./snacks-app/搜索结果.png">
+        <span class="img-list-item-info">搜索结果</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./snacks-app/零食发布页.png">
+        <span class="img-list-item-info">零食发布页</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./snacks-app/个人中心页.png">
+        <span class="img-list-item-info">个人中心页</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./snacks-app/我的发布.png">
+        <span class="img-list-item-info">我的发布</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./snacks-app/我的收藏.png">
+        <span class="img-list-item-info">我的收藏</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./snacks-app/个人设置.png">
+        <span class="img-list-item-info">个人设置</span>
+      </div>
     </div>
   </div>
 
