--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>6fa</title>
   <link rel="stylesheet" href="./index.css" type="text/css" />
+  <link rel="stylesheet" href="./snacks-app/snacks.css" type="text/css" />
   <link rel="stylesheet" href="./uploader/uploader.css" type="text/css" />
 </head>
 <body>
