--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>6fa</title>
   <link rel="stylesheet" href="./index.css" type="text/css" />
   <link rel="stylesheet" href="./snacks-app/snacks.css" type="text/css" />
+  <link rel="stylesheet" href="./accountBook/accountBook.css" type="text/css" />
   <link rel="stylesheet" href="./uploader/uploader.css" type="text/css" />
 </head>
 <body>
@@ -174,6 +175,56 @@
         <a href="#">Home</a>
         <a href="https://github.com/6fa/AccountBook">Github</a>
       </span>
+    </div>
+    <div class="img-list">
+      <div class="img-list-item">
+        <img src="./accountBook/image/明细页.png">
+        <span class="img-list-item-info">明细页</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./accountBook/image/明细页-详情.png">
+        <span class="img-list-item-info">明细页-详情</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./accountBook/image/明细页-时间选择.png">
+        <span class="img-list-item-info">明细页-时间选择</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./accountBook/image/记账页-支出.png">
+        <span class="img-list-item-info">记账页-支出</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./accountBook/image/记账页-收入.png">
+        <span class="img-list-item-info">记账页-收入</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./accountBook/image/记账页-时间选择.png">
+        <span class="img-list-item-info">记账页-时间选择</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./accountBook/image/记账页-记账.png">
+        <span class="img-list-item-info">记账页-记账.png</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./accountBook/image/支出类型设置.png">
+        <span class="img-list-item-info">类型设置</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./accountBook/image/添加类别.png">
+        <span class="img-list-item-info">添加类别</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./accountBook/image/账单页.png">
+        <span class="img-list-item-info">账单页</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./accountBook/image/账单页-时间选择.png">
+        <span class="img-list-item-info">账单页-时间选择</span>
+      </div>
+      <div class="img-list-item">
+        <img src="./accountBook/image/账单页-月度排行榜.png">
+        <span class="img-list-item-info">账单页-月度排行榜</span>
+      </div>
     </div>
   </div>
 
