--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
     <div class="title">
       <span>accountBook-app</span>
       <span>
-        <a href="#">Home</a>
-        <a href="https://github.com/6fa/AccountBook">Github</a>
+        <a href="#">首页</a>
+        <a href="https://github.com/6fa/AccountBook">项目地址</a>
       </span>
     </div>
     <div class="img-list">
