--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </div>
   </div>
 
-  <div class="accountBook component" style="display: none;">
+  <div class="account-book component" style="display: none;">
     <div class="title">
       <span>accountBook-app</span>
       <span>
