--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>6fa</title>
   <link rel="stylesheet" href="./index.css" type="text/css" />
   <link rel="stylesheet" href="./snacks-app/snacks.css" type="text/css" />
-  <link rel="stylesheet" href="./accountBook/accountBook.css" type="text/css" />
+  <link rel="stylesheet" href="./accountBook/account.css" type="text/css" />
   <link rel="stylesheet" href="./uploader/uploader.css" type="text/css" />
 </head>
 <body>
@@ -168,7 +168,7 @@
     </div>
   </div>
 
-  <div class="accountBook component" style="display: none;">
+  <div class="account component" style="display: none;">
     <div class="title">
       <span>accountBook-app</span>
       <span>
